<resources>
    <string name="app_name">Notification App</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="open">Open Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="g_suite_id">G-Suite ID</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="year">Year</string>
    <string name="course">Course</string>
    <string name="helper_text">Required*</string>
    <string name="password">Password</string>
    <string name="registration_number">Registration Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="already_a_user_click_here">Already a User? Click here!</string>
    <string name="sign_in">Sign In</string>
    <string name="not_yet_registered_click_here">Not yet Registered? Click Here!</string>
    <string name="mnnit_clubs">MNNIT Clubs</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
</resources>